fix: contrasts

--- a/src/components/Page/page.module.scss
+++ b/src/components/Page/page.module.scss
@@ -5,7 +5,7 @@
   padding: 48px 20px;
   margin: 0 auto;
   max-width: 600px;
-  color: #333;
+  color: black;
 
   h2 {
     font-weight: 700;
@@ -21,8 +21,7 @@
   }
 
   a {
-    text-decoration: none;
-    color: #1ea7fd;
+    color: blue;
   }
 
   ul {
@@ -41,7 +40,7 @@
     line-height: 12px;
     font-weight: 700;
     background: #e7fdd8;
-    color: #66bf3c;
+    color: #205009;
     padding: 4px 12px;
     margin-right: 10px;
     vertical-align: top;
@@ -62,7 +61,7 @@
       margin-top: 3px;
 
       path {
-        fill: #1ea7fd;
+        fill: blue;
       }
     }
   }
